--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel = "stylesheet" href ="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel = "stylesheet" href = "node_modules/bootstrap-social/bootstrap-social.css">
     <link rel = "stylesheet" href="css/style.css">
+    <!-- endbuild -->
+
 
     <title>Ristorante Con Fusion: About Us</title>
 
@@ -407,9 +410,13 @@
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 
     <!-- <script>
         $(document).ready(function(){
@@ -441,7 +448,7 @@
         });
     </script> -->
 
-    <script>
+    <!-- <script>
         $(document).ready(function(){
             $('#mycarousel').carousel ({interval : 2000});
             $('#carouselButton').click(function(){
@@ -481,7 +488,7 @@
         })
     })
 
-</script>
+</script> -->
 
 </body>
 
